# constitutional-reasoning-engine

./: .env.example  .gitignore  CLAUDE.md  DIRECTORY_REORGANIZATION_PROPOSAL.md  DIRECTORY_STRUCTURE_ANALYSIS.md  FINDINGS.md  PROJECT_BRIEF.md  PROJECT_JOURNAL.md  README.md  REORGANIZATION_TEST_PLAN.md  debug_llama.py  experiment_inspector.py  fix_experiment_state.py  pyproject.toml  robust_experiment_runner.py  simple_test.py  test_connectivity.py  test_deepseek.py  test_gemini.py  test_grok.py  test_llama.py  test_single.py  verify_system.py
analysis/: analyze.py  baseline_analysis.py  compare_evaluators.py  content_analysis.py  data_loader.py  dimensional_analysis.py  dimensionality.py  evaluator_agreement.py  export.py  export_to_google_sheets.py  generate_figures.py  inspect_data_structure.py  interaction_analysis.py  outlier_detection.py  rubric_comparison.py  rubric_diagnostic.py  select_validation_sample.py  stratified_analysis.py  visualization_config.py  visualize.py
docs/: ANALYSIS_AND_PUBLICATION_PLAN.md  ANNOTATION_METHODOLOGY_EVOLUTION.md  CONSTITUTIONAL_PREDICTIONS.md  DECISION_LOG.md  DUAL_TRACK_RUBRIC_V4.md  EPISTEMIC_INTEGRITY_DEDUCTION_GUIDE.md  EXPERIMENT_PROPOSALS.md  METHODOLOGY.md  PROGRESS_LOG.md  PROJECT_BRIEF_v2.md  PROJECT_OVERVIEW.md  RESEARCH_LLM_AS_JUDGE.md  RESEARCH_REPORT_OUTLINE.md  RESEARCH_ROADMAP.md  RUBRIC_V2.md  STATISTICAL_GUIDE.md  SUPPLEMENTARY_MATERIALS.md  TECHNICAL_ARCHITECTURE.md  VALIDATION_RUBRIC_GUIDE.md
experiments/: analysis.py  export_for_web.py  extract_scenarios.py  test_state_management.py
migration/: README.md  (+2 more)
(+11014 files in other folders)
