[tool.poetry]
name = "constitutional-reasoning-engine"
version = "0.1.0"
description = "AI system that tests how different value frameworks maintain factual integrity"
authors = ["Chris Bradley <chris.bradley@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.52.0"
asyncio = "^3.4.3"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
plotly = "^5.17.0"
python-dotenv = "^1.0.0"
pydantic = "^2.5.2"
jupyter = "^1.0.0"
numpy = "^1.25.2"
requests = "^2.31.0"
aiohttp = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true